# doc-multimodal-vqa

./: .gitignore  pyproject.toml
docs/: week1_doc_abstract.md  week1_note.md  week2_note.md
scripts/: inspect_docvqa_train.py
src/mm_docvqa/data/: loader.py  parser_docvqa.py
src/mm_docvqa/domain/: schemas.py
src/mm_docvqa/evaluation/: evaluator.py  metrics.py  normalize.py
tests/: test_metrics.py  test_parser.py  test_schemas.py
tests/fixtures/: fake_docvqa_ocr.json  fake_docvqa_sample.json
